--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
             <li><a href="./Contato/Contato.html"><b>Contato</b></a></li>
         </ul>
     </nav>
-    <p id="texto_principal"><strong>Olá! Aqui está o nosso cardápio:</strong></p>
+    <div id="texto_principal">
+        <br>
+        <p><strong>Olá! Aqui está o nosso cardápio:</strong></p>
+        <br>
+    </div>
     <main id="container_conteudo">
         <br>
         <nav id="formatting">
@@ -44,6 +48,7 @@
                 <p><strong>Ingredientes: Carne moida e molho especial.</strong></p>
             </div>
         </nav>
+        <br>
         <br>
     </main>
     <footer id="rodape">
