--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <a href="Termos E Politica/Politica.html">Politicas de Privacidade</a>
         </div>
     </footer>
+    <footer id="dev_estudo">
+        <p><strong>Esse site foi desenvolvido para fins de estudos, nada comercial.</strong></p>        
+    </footer>
     
 </body>
 </html>
